--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "smartfan_web",
   "version": "0.0.1",
+  "private": true,
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -11,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Leo1003/SmartFan_Web.git"
+    "url": "git+https://github.com/1046a/SmartFan_Web.git"
   },
   "author": "Leo Chen",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/Leo1003/SmartFan_Web/issues"
+    "url": "https://github.com/1046a/SmartFan_Web/issues"
   },
-  "homepage": "https://github.com/Leo1003/SmartFan_Web#readme",
+  "homepage": "https://github.com/1046a/SmartFan_Web#readme",
   "dependencies": {
     "@koa/cors": "^3.0.0",
     "debug": "^4.1.1",
@@ -27,6 +28,10 @@
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.0",
     "koa-onerror": "^4.1.0",
+    "koa-router": "^7.4.0",
     "koa-static": "^5.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
