--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   "homepage": "https://github.com/1046a/SmartFan_Web#readme",
   "dependencies": {
     "@koa/cors": "^3.0.0",
+    "boom": "^7.3.0",
     "debug": "^4.1.1",
     "koa": "^2.7.0",
+    "koa-better-error-handler": "^2.0.0",
     "koa-bodyparser": "^4.2.1",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.0",
-    "koa-onerror": "^4.1.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0"
   },
