--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0"
+    "koa-static": "^5.0.0",
+    "semantic-ui": "^2.4.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
