--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "DEBUG=SmartFan_Web:* node app.js",
     "pm2": "pm2 start app.js --name \"SmartFan_Web\"",
     "nodemon": "DEBUG=SmartFan_Web:* nodemon app.js",
+    "semantic": "cd semantic && gulp build",
+    "postinstall": "npm run semantic",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -31,6 +33,7 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
+    "rpi-gpio": "^2.1.3",
     "semantic-ui": "^2.4.2"
   },
   "devDependencies": {
