--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@koa/cors": "^3.0.0",
     "boom": "^7.3.0",
     "debug": "^4.1.1",
+    "ffi": "^2.3.0",
     "koa": "^2.7.0",
     "koa-better-error-handler": "^2.0.0",
     "koa-bodyparser": "^4.2.1",
@@ -33,6 +34,7 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
+    "mqtt": "^2.18.8",
     "rpi-gpio": "^2.1.3",
     "semantic-ui": "^2.4.2"
   },
