--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "rpi-gpio": "^2.1.3",
-    "semantic-ui": "^2.4.2"
+    "semantic-ui": "^2.4.2",
+    "serialport": "^7.1.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
