--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "mqtt": "^2.18.8",
+    "ref": "^1.3.5",
+    "repeat": "^1.1.2",
     "rpi-gpio": "^2.1.3",
     "semantic-ui": "^2.4.2"
   },
